--- a/app/index.html
+++ b/app/index.html
@@ -32,120 +32,197 @@
 
     <div class="large-hero">
       <picture>
-        <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" 
-          media="(min-width: 1380px)">
-        <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" 
-          media="(min-width: 990px)">
-        <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" 
-          media="(min-width: 640px)">
-        <img class="large-hero__image"  srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Ocean view">
+        <source
+          srcset="
+            assets/images/hero--large.jpg        1920w,
+            assets/images/hero--large-hi-dpi.jpg 3840w
+          "
+          media="(min-width: 1380px)"
+        />
+        <source
+          srcset="
+            assets/images/hero--medium.jpg        1380w,
+            assets/images/hero--medium-hi-dpi.jpg 2760w
+          "
+          media="(min-width: 990px)"
+        />
+        <source
+          srcset="
+            assets/images/hero--small.jpg         990w,
+            assets/images/hero--small-hi-dpi.jpg 1980w
+          "
+          media="(min-width: 640px)"
+        />
+        <img
+          class="large-hero__image"
+          srcset="
+            assets/images/hero--smaller.jpg         640w,
+            assets/images/hero--smaller-hi-dpi.jpg 1280w
+          "
+          alt="Ocean view"
+        />
       </picture>
       <div class="large-hero__text-content">
         <div class="wrapper">
           <h1 class="large-hero__title">Таны нандин дурсамж.</h1>
           <h2 class="large-hero__subtitle">Ганцхан алхам үлдлээ.</h2>
-          <p class="large-hero__description">Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
-          <p><a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a></p>
-        </div>         
+          <p class="large-hero__description">
+            Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.
+          </p>
+          <p>
+            <a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a>
+          </p>
+        </div>
       </div>
     </div>
 
     <div class="page-section" id="our-beginning">
       <div class="wrapper">
-        <h2 class="headline headline--centered headline--light headline--b-margin-small">
+        <h2
+          class="headline headline--centered headline--light headline--b-margin-small"
+        >
           Бид анх <strong>өөрсдийнхөө аяллаар</strong> эхлэж байлаа.
         </h2>
-        <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light    headline--b-margin-large">
-          Одоо бид <strong>бусдын аяллыг</strong> дурсамжтай болгохыг зорьж байна.
+        <h3
+          class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large"
+        >
+          Одоо бид <strong>бусдын аяллыг</strong> дурсамжтай болгохыг зорьж
+          байна.
         </h3>
         <div class="wrapper wrapper--medium wrapper--b-margin">
           <img
             sizes="(min-width: 970px) 976px, 100vw"
-            srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w"
+            srcset="
+              assets/images/first-trip-low-res.jpg  565w,
+              assets/images/first-trip.jpg          976w,
+              assets/images/first-trip-hi-dpi.jpg  1952w
+            "
             alt="Couple walking down a street."
           />
         </div>
         <div class="row row--gutters">
-          <div class="row__medium-4 row__medium-4--larger row__b-margin-until-medium">
+          <div
+            class="row__medium-4 row__medium-4--larger row__b-margin-until-medium"
+          >
             <picture>
-              <source media="(min-width: 1020px)" 
-                srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w">
-              <source media="(min-width: 800px)" 
-                srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait.jpg 764w">
-              <img srcset="./assets/images/our-start-landscape.jpg 800w, ./assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe">
+              <source
+                media="(min-width: 1020px)"
+                srcset="
+                  ./assets/images/our-start.jpg        404w,
+                  ./assets/images/our-start-hi-dpi.jpg 808w
+                "
+              />
+              <source
+                media="(min-width: 800px)"
+                srcset="
+                  ./assets/images/our-start-portrait.jpg 382w,
+                  ./assets/images/our-start-portrait.jpg 764w
+                "
+              />
+              <img
+                srcset="
+                  ./assets/images/our-start-landscape.jpg         800w,
+                  ./assets/images/our-start-landscape-hi-dpi.jpg 1600w
+                "
+                alt="Our founder, Jane Doe"
+              />
             </picture>
           </div>
           <div class="row__medium-8 row__medium-8--smaller">
             <div class="generic-content-container">
-              <h2 class="headline headline--no-t-margin">Бид хэрхэн эхлэсэн бэ?</h2>
+              <h2 class="headline headline--no-t-margin">
+                Бид хэрхэн эхлэсэн бэ?
+              </h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam,
+                <a href="#">quis nostrud exercitation</a> ullamco laboris nisi
                 ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum.
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
               <p>
-                Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Duis aute irure dolor in
+                <strong>reprehenderit in</strong> voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.
               </p>
               <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                velit esse cillum <strong>dolore eu fugiat.</strong>
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum velit esse cillum
+                <strong>dolore eu fugiat.</strong>
               </p>
             </div>
-          </div>      
+          </div>
         </div>
       </div>
     </div>
 
     <div id="features" class="page-section page-section--blue">
       <div class="wrapper">
-        <h2 class="section-title"><img class="section-title__icon" src="assets/images/icons/star.svg" />Бидний <strong>онцлогууд</strong></h2>
+        <h2 class="section-title">
+          <img
+            class="section-title__icon"
+            src="assets/images/icons/star.svg"
+          />Бидний <strong>онцлогууд</strong>
+        </h2>
         <div class="row row--gutters-large generic-content-container">
           <div class="row__medium-6">
             <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg" />
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/rain.svg"
+              />
               <h3 class="feature-item__title">Бид цаг уурыг аждаг</h3>
               <p>
-                Манай апп-ыг татаж авч ашиглавал бид танд бороо орохоос 20 минутын өмнө
-                мэдэгдэж байх болно. Бусад мэдээллүүдийг ч цаг тухайд нь авах боломжтой.
+                Манай апп-ыг татаж авч ашиглавал бид танд бороо орохоос 20
+                минутын өмнө мэдэгдэж байх болно. Бусад мэдээллүүдийг ч цаг
+                тухайд нь авах боломжтой.
               </p>
             </div>
             <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/globe.svg" />
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/globe.svg"
+              />
               <h3 class="feature-item__title">Аяллын лавлах</h3>
               <p>
-                Таны урд хожид огт сонсож байгаагүй, дэлхий дээрх үзэсгэлэнт газрууд,
-                аялал жуулчлалын гайхалтай хотуудын талаар бид судласан бөгөөд та
-                тэдгээр газруудаас сонгон аялж болно.
+                Таны урд хожид огт сонсож байгаагүй, дэлхий дээрх үзэсгэлэнт
+                газрууд, аялал жуулчлалын гайхалтай хотуудын талаар бид судласан
+                бөгөөд та тэдгээр газруудаас сонгон аялж болно.
               </p>
             </div>
           </div>
           <div class="row__medium-6">
             <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/wifi.svg" />
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/wifi.svg"
+              />
               <h3 class="feature-item__title">Wi-Fi-тай цэгүүд</h3>
               <p>
-                Манай апп-ыг татаж авснаар өөрийн аялж буй газар оронд байгаа үнэгүй
-                wi-fi бүхий цэгүүд, нууц үгсийн мэдээллийг авах боломжтой бөгөөд хэзээ ч
-                холбоо тасрах аюулгүй болох юм.
+                Манай апп-ыг татаж авснаар өөрийн аялж буй газар оронд байгаа
+                үнэгүй wi-fi бүхий цэгүүд, нууц үгсийн мэдээллийг авах боломжтой
+                бөгөөд хэзээ ч холбоо тасрах аюулгүй болох юм.
               </p>
             </div>
             <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/fire.svg" />
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/fire.svg"
+              />
               <h3 class="feature-item__title">Аяллын хэрэгслүүд</h3>
               <p>
-                Та манай аяллуудаар гурваас дээш удаа аялбал бид танд майхан барих, гал
-                түлэх, хоол хийх, загас барих хэрэгслүүдийг бэлэглэх болно.
+                Та манай аяллуудаар гурваас дээш удаа аялбал бид танд майхан
+                барих, гал түлэх, хоол хийх, загас барих хэрэгслүүдийг бэлэглэх
+                болно.
               </p>
             </div>
           </div>
@@ -153,44 +230,69 @@
       </div>
     </div>
 
-    <div id="testimonials">
-      <img src="assets/images/icons/comment.svg" />
-      <h2>Хэрэглэгчдийн талархлууд</h2>
+    <div id="testimonials" class="page-section page-section--testimonials">
+      <div class="wrapper wrapper--no-padding-until-large">
+        <h2 class="section-title section-title--blue">
+          <img
+            class="section-title__icon"
+            src="assets/images/icons/comment.svg"
+          />Хэрэглэгчдийн <strong>талархлууд</strong>
+        </h2>
+        <div class="row row--gutters row--gutters-small row--equal-height-at-large generic-content-container row--t-padding">
+          <div class="row__large-4">
+            <div class="testimonial">
+              <div class="testimonial__photo">
+                <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe"/>
+              </div>
+              <h3 class="testimonial__title">Батчимэг</h3>
+              <h4 class="testimonial__subtitle">9 удаагийн аялагч</h4>
+              <p>
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.&rdquo;
+              </p>
+            </div>
+          </div>
 
-      <img src="assets/images/testimonial-jane.jpg" />
-      <h3>Батчимэг</h3>
-      <h3>9 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua.&rdquo;
-      </p>
-
-      <img src="assets/images/testimonial-john.jpg" />
-      <h3>Дэлгэрбаяр</h3>
-      <h3>4 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;
-      </p>
-
-      <img src="assets/images/testimonial-cat.jpg" />
-      <h3>Шар Том</h3>
-      <h3>6 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit, sed do eiusmod tempor incididunt ut.&rdquo;
-      </p>
+          <div class="row__large-4">
+            <div class="testimonial">
+              <div class="testimonial__photo">
+                <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Doe"/>
+              </div>
+              <h3 class="testimonial__title">Дэлгэрбаяр</h3>
+              <h4 class="testimonial__subtitle">4 удаагийн аялагч</h4>
+              <p>
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur.&rdquo;
+              </p>
+            </div>           
+          </div>
+          <div class="row__large-4">
+            <div class="testimonial testimonial--last">
+              <div class="testimonial__photo">
+                <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Tom Cat"/>
+              </div>        
+              <h3 class="testimonial__title">Шар Том</h3>
+              <h4 class="testimonial__subtitle">6 удаагийн аялагч</h4>
+              <p>
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut.&rdquo;
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
     <footer>
       <p>
         Copyright &copy; 2019 Platinum Travel. All rights reserved.
@@ -215,6 +317,6 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
-  <script src="bundled.js"></script>
+    <script src="bundled.js"></script>
   </body>
 </html>
